Projet terminer after changes

--- a/bd/public/index.html
+++ b/bd/public/index.html
@@ -12,5 +12,5 @@
 </head>
 <body>
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-K4M3ZAEL.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-DQMRZQKR.js" type="module"></script></body>
 </html>
